# packages/contracts/src/openapi.ts
@@ -1221,6 +1221,45 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/v1/workspaces/{workspaceId}/exports": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        post: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    workspaceId: string;
+                };
+                cookie?: never;
+            };
+            requestBody?: {
+                content: {
+                    "application/json": unknown | components["schemas"]["CreateExportRequest"];
+                };
+            };
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content?: never;
+                };
+            };
+        };
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/api/v1/sessions/{sessionId}/participants/{participantId}/join": {
         parameters: {
             query?: never;
@@ -2951,6 +2990,9 @@ export interface components {
             typeKey: string | null;
             displayName: string | null;
             attributeSchema: string | null;
+        };
+        CreateExportRequest: {
+            organizationSlug: string | null;
         };
         CreateOrganizationRequest: {
             slug: string | null;
